--- a/notebook/C2 调用大模型 API/.env
+++ b/notebook/C2 调用大模型 API/.env
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
 OPENAI_API_KEY = ""
-=======
-OPENAI_API_KEY = ""
->>>>>>> e3700605b0c4b144ffad01d27e401935ad91fc20
+wenxin_api_key = ''
+wenxin_secret_key = ''
